fix for Event/Todo create popup broken in IE. Fixes #3403 -minnie

--- a/themes/alphagrey/style.css
+++ b/themes/alphagrey/style.css
@@ -1392,7 +1392,7 @@ a.calMnu:Hover{
 	background-color:#ddd;
 	border:1px solid #999999;
 	text-align:left;
-	width:100%;
+	width:95%;
 	position:relative;
 	left:0px;
 	top:0px;
