--- a/themes/bluelagoon/style.css
+++ b/themes/bluelagoon/style.css
@@ -1357,7 +1357,7 @@ a.calMnu:Hover{
 	background-color:#D3EAF0;
 	border:1px solid #999999;
 	text-align:left;
-	width:100%;
+	width:95%;
 	position:relative;
 	left:0px;
 	top:0px;
